--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  overflow: hidden;
 
   position: relative;
 }
